dark mode issue solve

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 /*----- Dark Mode -----*/
 
 .dark-mode {
-    background-color: #000;
+    background: #000;
     color: #fff;
 }
 
@@ -42,6 +42,7 @@
     left: 30px;
     font-size: 40px;
     cursor: pointer;
+    color: #000;
     display: none;
 }
 
@@ -317,6 +318,7 @@
 
 .profile .name_and_class P {
     font-weight: 600;
+    color: #000;
 }
 
 .profile .name_and_class span {
@@ -415,6 +417,7 @@
     .left_sidebar .logo h2 {
         margin-top: 100px;
         margin-bottom: 20px;
+        color: #000;
     }
     .left_sidebar .menu_items .menu_item {
         font-size: 18px;
@@ -445,6 +448,10 @@
     .profile .about h4,
     .profile .other_info h4 {
         font-size: 15px;
+        color: #000;
+    }
+    .notification_and_name {
+        color: #000;
     }
     .notification_and_name .bx-chevron-down {
         display: none;
@@ -456,6 +463,7 @@
     .profile .contact_info {
         font-size: 24px;
         gap: 20px;
+        color: #000;
     }
     .profile .about p,
     .profile .other_info p,
@@ -527,6 +535,7 @@
     .left_sidebar .logo h2 {
         margin-top: 100px;
         margin-bottom: 20px;
+        color: #000;
     }
     .left_sidebar .menu_items .menu_item {
         font-size: 18px;
@@ -557,6 +566,10 @@
     .profile .about h4,
     .profile .other_info h4 {
         font-size: 15px;
+        color: #000;
+    }
+    .notification_and_name {
+        color: #000;
     }
     .notification_and_name .bx-chevron-down {
         display: none;
@@ -568,6 +581,7 @@
     .profile .contact_info {
         font-size: 24px;
         gap: 20px;
+        color: #000;
     }
     .profile .about p,
     .profile .other_info p,
@@ -639,6 +653,7 @@
     .left_sidebar .logo h2 {
         margin-top: 100px;
         margin-bottom: 20px;
+        color: #000;
     }
     .left_sidebar .menu_items .menu_item {
         font-size: 18px;
@@ -669,6 +684,10 @@
     .profile .about h4,
     .profile .other_info h4 {
         font-size: 15px;
+        color: #000;
+    }
+    .notification_and_name {
+        color: #000;
     }
     .notification_and_name .bx-chevron-down {
         display: none;
@@ -680,6 +699,7 @@
     .profile .contact_info {
         font-size: 24px;
         gap: 20px;
+        color: #000;
     }
     .profile .about p,
     .profile .other_info p,
